<resources>
    <string name="app_name">Search Academy</string>
    <string name="notice_tv_button1">নোটিশ :</string>
    <string name="services_text_button1">services........................................................</string>
    <string name="text_button2">text_button2</string>
    <string name="text_button3">text_button3</string>
    <string name="content_Description">contentDescription</string>


    <string name="exam_all">All Exam</string>
    <string name="HRD_korea">HRD Korea</string>
    <string name="boesl_b">BOESL</string>

    <string name="boesl_ma3_1">BOESL Wedsite</string>
    <string name="boesl_ma3_2">BOESL Facebook</string>
    <string name="boesl_ma3_3">Search Academy Facebook Group</string>
    <string name="HRD_ma4_1">HRD Korea Wedsite</string>
    <string name="HRD_ma4_2">EPS ID Check Wedsite</string>

    <string name="notice_button">Notice</string>
    <string name="Grammar_button">Grammar</string>
    <string name="basic_button">Basic</string>
    <string name="vocabulary_button">শব্দ ভান্ডার</string>
    <string name="visa_check">Visa check</string>
    <string name="textbook_listening">Textbook Listaning</string>
    <string name="skill_test">Skill Test</string>
    <string name="suggestion_button">পরামর্শ</string>
    <string name="colour_button">Coler Blind</string>


    <string name="image_button1">image!</string>
    <string name="image_button2">image2</string>
    <string name="image_button3">image3</string>
    <string name="image_button4">image4</string>
    <string name="image_button5">image5</string>
    <string name="image_button6">image6</string>
    <string name="image_button7">image7</string>
    <string name="exam_one1">Exam-01</string>
    <string name="exam_one2">Exam-02</string>
    <string name="exam_one3">Exam-03</string>
    <string name="exam_one4">Exam-04</string>
    <string name="exam_one5">Exam-05</string>
    <string name="exam_one6">Exam-06</string>
    <string name="exam_one7">Exam-07</string>
    <string name="exam_one8">Exam-08</string>
    <string name="exam_one9">Exam-09</string>
    <string name="exam_one10">Exam-10</string>
    <string name="exam_one11">Exam-11</string>
    <string name="exam_one12">Exam-12</string>
    <string name="exam_one13">Exam-13</string>
    <string name="exam_one14">Exam-14</string>
    <string name="exam_one15">Exam-15</string>
    <string name="exam_one16">Exam-16</string>
    <string name="exam_one17">Exam-17</string>
    <string name="exam_one18">Exam-18</string>
    <string name="exam_one19">Exam-19</string>
    <string name="exam_one20">Exam-20</string>
    <string name="exam_one21">Exam-21</string>
    <string name="exam_one22">Exam-22</string>
    <string name="exam_one23">Exam-23</string>
    <string name="exam_one24">Exam-24</string>
    <string name="exam_one25">Exam-25</string>
    <string name="exam_one26">Exam-26</string>
    <string name="exam_one27">Exam-77</string>
    <string name="exam_one28">Exam-28</string>
    <string name="exam_one29">Exam-29</string>
    <string name="exam_one30">Exam-30</string>
    <string name="exam_one31">Exam-31</string>
    <string name="exam_one32">Exam-32</string>
    <string name="exam_one33">Exam-33</string>
    <string name="exam_one34">Exam-34</string>
    <string name="exam_one35">Exam-35</string>
    <string name="exam_one36">Exam-36</string>
    <string name="exam_one37">Exam-37</string>
    <string name="exam_one38">Exam-38</string>
    <string name="exam_one39">Exam-39</string>
    <string name="exam_one40">Exam-40</string>
    <string name="exam_one41">Exam-41</string>
    <string name="exam_one42">Exam-42</string>
    <string name="all_exam_list">All Exam List</string>
    <string name="all_top_notice"> হ্যালো!আমি,এস শান্ত রাজ। আপনারা ইপিএস এর সকল তথ্য এই অ্যাপস এর মাধ্যমে পেয়ে যাবেন। শুধু তাই নয় ইপিএস এর সকল পরীক্ষাগুলো বিনামূল্যে এই অ্যাপস এর মাধ্যমে দিতে পারবেন। ধন্যবাদান্তে… এস শান্ত রাজ, পরিচালক, সার্চ একাডেমি।안녕하세요! 저는 Shanta Raj입니다. 이 앱을 통해 EPS의 모든 정보를 얻을 수 있습니다. 뿐만 아니라 EPS의 모든 시험은 이 앱을 통해 무료로 볼 수 있습니다. 감사합니다… S Shanta Raj, Search Academy 이사.</string>
    <string name="all_top_notis2"> ওয়েলকাম, ১ থেকে ৮ নাম্বার পর্যন্ত পরীক্ষা একদম সহজ। ৯ থেকে ১৫ পর্যন্ত মাঝারি আকারের সহজ।১৬ ১৬ থেকে বাকি পরীক্ষা গুলো স্ট্যান্ডার্ডম্যান। বেশি পরীক্ষা দিয়ে নিজের সাহস সংগ্রহ করুন। আপনার পাশে সবসময় 💚পরিচালক এস শান্ত রাজ, পরিচালক, সার্চ একাডেমি।</string>
    <string name="all_top_notis3"> সুস্বাগতম! বোয়েসেল এর তথ্যগুলো জানতে নিচের বাটন গুলোতে ক্লিক করতে পারেন। আপনার পাশে সবসময় 💚পরিচালক এস শান্ত রাজ। পরিচালক, সার্চ একাডেমি।</string>
    <string name="all_top_notis4"> সুস্বাগতম! HRD Korea এর তথ্যগুলো জানতে নিচের বাটন গুলোতে ক্লিক করতে পারেন। আপনার পাশে সবসময় 💚পরিচালক এস শান্ত রাজ। পরিচালক, সার্চ একাডেমি।</string>


    <string name="visa_check_notice">ওয়েলকাম,নিচের দেশ গুলোর ভিসা চেক করুন। নিরাপদে বিদেশ গমন করুন। আপনার যাত্রা শুভ হোক। </string>
    <string name="visa">Check Visa</string>
    <string name="visa_check1">Check Visa</string>
    <string name="Bangladesh">Bangladesh</string>
    <string name="India">India</string>
    <string name="Malaysia">Malaysia</string>
    <string name="Singapore">Singapore</string>
    <string name="Saudi_Arab">Saudi Arab</string>
    <string name="Maldives">Maldives</string>
    <string name="Qatar">Qatar</string>
    <string name="Kuwait">Kuwait</string>
    <string name="United_State">United State</string>
    <string name="South_Korea">South Korea</string>
    <string name="Sri_Lanka">Sri Lanka</string>
    <string name="Japan">Japan</string>

</resources>
