<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fullbacgraund"
    tools:context=".MainActivity3">

    <TextView
        android:id="@+id/marqueeText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#63120202"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/all_top_notis3"
        android:textColor="#FFBF00"
        android:textSize="30sp"
        android:textStyle="italic" />



    <Button
        android:id="@+id/b_ma_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#80FF8800"
        android:text="@string/boesl_ma3_1"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textStyle="bold" />


    <Button
        android:id="@+id/b_ma_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#A6FF8800"
        android:text="@string/boesl_ma3_2"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textStyle="bold" />

    <Button
        android:id="@+id/b_ma_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#D07208"
        android:text="@string/boesl_ma3_3"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textStyle="bold" />




</LinearLayout>